@@ -3,7 +3,7 @@ include $(top_srcdir)/Makefile.decl
 AM_CPPFLAGS=-I$(top_srcdir)/protocol $(GTK_CFLAGS)
 LDADD=$(top_builddir)/protocol/libprotocol.la
 
-TESTS_ENVIRONMENT=./sapwood-wrapper
+TESTS_ENVIRONMENT=$(srcdir)/sapwood-wrapper
 
 noinst_PROGRAMS = $(TEST_PROGS)
 
@@ -12,3 +12,6 @@ double_free_SOURCES=double-free.c
 double_free_CPPFLAGS=$(AM_CPPFLAGS) $(GIO_CFLAGS) -I$(top_srcdir)/engine
 double_free_LDADD=$(LDADD) $(GIO_LIBS)
 
+EXTRA_DIST+=\
+	sapwood-wrapper \
+	$(NULL)
